syntax = "proto3";

package main.api.chatpb;

option go_package = "main/api/chatpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat {
    rpc Create(CreateChatRequest) returns (CreateChatResponse);
    rpc Delete(ChatId) returns (google.protobuf.Empty);
    rpc SendMessages(stream ChatMessage) returns (google.protobuf.Empty);
    rpc GetMessages(ChatId) returns (stream ChatMessage);
}

message CreateChatResponse {
    ChatId id = 1;
}

message CreateChatRequest {
    repeated Username usernames = 1; 
}

message ChatMessage {
    ChatId id = 1;
    string from = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4; 
}

message Username {
    string username = 1;
}

message ChatId {
    int64 id = 1;
}