syntax = "proto3";

package main.api.user;

option go_package = "main/api/user";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service User {
    rpc Create(CreateUserRequest) returns (UserId);
    rpc Update(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc Get(UserId) returns (UserInfo);
    rpc Delete(UserId) returns (google.protobuf.Empty) {};
}

message UserId {
    int64 id = 1;
}

enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
}

message UserInfo {
    UserId id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;

}

message UpdateUserRequest {
    UserId id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}


